force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/CSBD_AdministracionPromptsProductos__mdt.object-meta.xml
<CustomObject>
    <description>Para administrar para los productos seleccionados si se permite enviar prompts de sus oportunidades y cuales prompts corresponden a cada llamada que se va a hacer.
Usar el Label de los registros para comprobar a que producto corresponde, el Name no permite poner espacios o acentos.</description>
    <label>CSBD: Administracion prompts producto</label>
    <pluralLabel>CSBD: Administracion prompts productos</pluralLabel>
</CustomObject>