force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_ArticulosPorPrompt__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ArticulosPorPrompt__c</fullName>
    <description>Número de artículos por prompt en caso de que se paralelice la búsqueda de información para el chat.</description>
    <inlineHelpText>Poner el número de artículos en el caso de querer paralelizar. En caso de no querer paralelizar dejar vacío el campo.</inlineHelpText>
    <label>Articulos Por Prompt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>