force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_PromptAmpliadaAUtilizar__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PromptAmpliadaAUtilizar__c</fullName>
    <description>Plantilla para ampliar el resumen inicial de la oportunidad</description>
    <label>Prompt Ampliada a Utilizar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>