force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_PromptArgumentarioAUtilizar__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PromptArgumentarioAUtilizar__c</fullName>
    <description>El API name del prompt que hace el argumentario..
Con Text es suficiente porque en prompt el api name tiene como máximo 80 caracteres.</description>
    <label>Prompt Argumentario a utilizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>