force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_PromptAsistenteAUtilizar__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PromptAsistenteAUtilizar__c</fullName>
    <defaultValue>&quot;CSBD_ChatGPTOportunidad&quot;</defaultValue>
    <description>Prompt que se usará en el asistente interactivo</description>
    <label>Prompt Asistente a utilizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>