force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_PromptComparadorAUtilizar__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PromptComparadorAUtilizar__c</fullName>
    <defaultValue>&quot;CSBD_GPTchatComparacionProd&quot;</defaultValue>
    <description>Prompt que se utilizará en el comparador</description>
    <label>Prompt Comparador a utilizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>