force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/fields/CSBD_PromptOportunidadAUtilizar__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PromptOportunidadAUtilizar__c</fullName>
    <description>El API name del prompt que hace el resumen de la oportunidad.
Con Text es suficiente porque en prompt el api name tiene como máximo 80 caracteres.</description>
    <label>Prompt Oportunidad a utilizar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>