force-app/main/default/objects/CSBD_AdministracionPromptsProductos__mdt/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CSBD_EnviarAIA__c</columns>
    <columns>CSBD_PromptAmpliadaAUtilizar__c</columns>
    <columns>CSBD_PromptArgumentarioAUtilizar__c</columns>
    <columns>CSBD_PromptOportunidadAUtilizar__c</columns>
    <columns>CSBD_PromptProductoAUtilizar__c</columns>
    <columns>CSBD_ArticulosPorPrompt__c</columns>
    <columns>CSBD_BusquedaEnDosPasos__c</columns>
    <columns>CSBD_PromptAsistenteAUtilizar__c</columns>
    <columns>CSBD_PromptComparadorAUtilizar__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>en_US</language>
</ListView>